# Lightweight-SAM-for-grain-size-analysis

./: .gitignore  Evaluation_pipeline.ipynb  LICENSE  README.md  pyproject.toml  requirements.txt  scale_factors.json  setup.py
annotations/: Basalt.json  Cemented_sandstone.json  Ceramic.json  Dunite.json  OffshoreMiocene.json  Ooid.json  SEM_sand.json  SEM_sandstone.json  Zircon.json
results/mobilesam_example/: distribution_similarity_metrics.csv  grain_distributions_comprehensive.xlsx  segmentation_metrics.csv
