[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-code-section"
version = "0.1.0"
description = "This code accompanies the publication 'Comparative Study of Segment Anything Models for Grain Size Analysis: One Step Towards Automation' and is provided for code availability and reproducibility."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "matplotlib",
    "opencv-python",
    "pandas",
    "scipy",
    "scikit-learn",
    "openpyxl",
    "mobile_sam @ git+https://github.com/ChaoningZhang/MobileSAM.git",
]

# No package structure needed as we're using direct imports
